[package]
name = "surf-issue"
version = "0.1.0"
authors = ["igor <tk.igor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf =  { version = "2.1", default-features = false, features = ["hyper-client", "encoding", "curl-client"] }
tokio = { version = "1", features = ["full"] }
